--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -66,7 +66,7 @@
             android:layout_gravity="center"
             android:textStyle="normal"
             android:background="@drawable/spinner_border_round_orange"
-            android:backgroundTint="@color/orange"
+            android:backgroundTint="@color/selectedicon"
             android:drawableStart="@drawable/plus_icon"
             android:drawableEnd="@drawable/arrow_down"
             android:drawableTint="@color/white"
@@ -86,18 +86,6 @@
         android:background="@color/white"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@+id/element_top_note">
-
-        <TextView
-            android:id="@+id/tv_path"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/blue"
-            android:textSize="14sp"
-            android:ellipsize="start"
-            android:singleLine="true"
-            tools:text="Home > Folder1" />
-
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
