--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="my_images" path="." />
     <external-files-path name="my_images" path="." />
-    <files-path name="my_images" path="." />
-    <cache-path name="my_images" path="." />
+    <external-path name="external" path="." />
+    <files-path name="files" path="." />
+    <cache-path name="cache" path="." />
+    <external-cache-path name="external_cache" path="." />
+    <external-media-path name="external_media" path="." />
 </paths>
