--- a/app/src/main/res/layout/layout_topic_selection.xml
+++ b/app/src/main/res/layout/layout_topic_selection.xml
@@ -16,13 +16,18 @@
         android:layout_marginBottom="16dp" />
 
     <!-- Container cho danh sách checkbox -->
-    <LinearLayout
+    <com.google.android.flexbox.FlexboxLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/topicsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <!-- CheckBox sẽ được thêm vào động -->
-    </LinearLayout>
+        android:padding="8dp"
+        app:flexWrap="wrap"
+        app:flexDirection="row"
+        app:justifyContent="flex_start"
+        app:alignItems="flex_start">
+    </com.google.android.flexbox.FlexboxLayout>
 
     <Button
         android:id="@+id/btnSelectTopic"
