--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -26,7 +26,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Community"
+                android:text="@string/community_header"
                 android:textColor="@android:color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
@@ -111,7 +111,7 @@
                             android:id="@+id/rbAll"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
-                            android:text="All"
+                            android:text="@string/community_all"
                             android:checked="true"
                             android:background="@drawable/tab_selector"
                             android:button="@null"
